<resources>
    <string name="app_name">Numbers puzzle</string>
    <string name="moves">Moves:</string>
    <string name="start_restart_game">restart game</string>
    <string name="finish_game">Click to finish game</string>
    <string name="unfinished_game">Unfinished game, please keep order the cubes</string>
    <string name="start_game">Press on start game</string>
    <string name="well_done">Well Done!!!</string>
    <string name="won_game">"You won the game with "</string>
    <string name="with_moves">moves</string>
    <string name="minutes">minutes.</string>
    <string name="to_main_menu">To main menu</string>
    <string name="to_high_scores">To high scores</string>
    <string name="easy_level">Easy level</string>
    <string name="medium_level">Medium level</string>
    <string name="hard_level">Hard level</string>
    <string name="play_game">Play</string>
    <string name="move_to_classic_puzzle">Classic Puzzle</string>
    <string name="move_to_high_scores">High scores</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_name_please">Please enter your name</string>
    <string name="need_press_start">You need to press start game</string>
    <string name="save_score">Save score</string>
    <string name="restart_game">Restart game</string>
    <string name="move_to_image_puzzle">Image Puzzle</string>
    <string name="username">Username</string>
    <string name="score">Score</string>
    <string name="date">Date</string>
    <string name="insert_image">Insert image</string>
    <string name="please_shuffle_cubes">Please shuffle cubes</string>
    <string name="choose_level">Choose level</string>
    <string name="intoduction_classic">play in classic puzzle game by move cubes to blank space and order numbers from left to right</string>
    <string name="introduction_image">play in image puzzle game by move image cube to blank space and order the image, you can choose if your image will be capture or existing image in your device</string>
    <string name="choose_table">Choose table</string>
    <string name="introduction_table">choose table in each level to see your scores in each puzzle mode</string>
    <string name="about">About</string>
    <string name="make_contact">Make contact</string>
    <string name="all_copyrights_reserved">All Copyright Reserved to Ouriel Ohayon</string>
    <string name="send_mail_with">Send mail with</string>
    <string name="are_you_sure">Are you sure that you want to exit from the app?</string>
    <string name="yayyy">yayy</string>
    <string name="exit_from_app">Exit from app</string>
</resources>
