<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textSize="20sp"
            android:text="@string/username"
            android:textColor="@color/colorAccent"

            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textSize="20sp"
            android:text="@string/score"
            android:textColor="@color/colorAccent"


            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:textSize="20sp"
            android:text="@string/date"
            android:textColor="@color/colorAccent"
            />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:id="@+id/list_view_4x4">

    </ListView>

</LinearLayout>