<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gamebg"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_margin="10dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square0_5x5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background="@drawable/cube_red_background"
                    android:text="1"
                    android:textColor="@color/number_color" />

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square1_5x5"
                    android:text="2"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_red_background" />

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square2_5x5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background="@drawable/cube_red_background"
                    android:text="3"
                    android:textColor="@color/number_color" />

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square3_5x5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background="@drawable/cube_red_background"
                    android:text="4"
                    android:textColor="@color/number_color" />

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square4_5x5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background="@drawable/cube_red_background"
                    android:text="5"
                    android:textColor="@color/number_color" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">


                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square5_5x5"
                    android:text="6"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_red_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square6_5x5"
                    android:text="7"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_blue_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square7_5x5"
                    android:text="8"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_blue_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square8_5x5"
                    android:text="9"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_blue_background" />

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square9_5x5"
                    android:text="10"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_blue_background"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square10_5x5"
                    android:text="11"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_red_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square11_5x5"
                    android:text="12"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_blue_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square12_5x5"
                    android:text="13"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_green_background" />

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square13_5x5"
                    android:text="14"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_green_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square14_5x5"
                    android:text="15"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_green_background"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square15_5x5"
                    android:text="16"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_red_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square16_5x5"
                    android:text="17"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_blue_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square17_5x5"
                    android:text="18"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_green_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square18_5x5"
                    android:text="19"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_gold_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square19_5x5"
                    android:text="20"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_gold_background"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal">

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square20_5x5"
                    android:text="21"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_red_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square21_5x5"
                    android:text="22"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_blue_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square22_5x5"
                    android:text="23"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_green_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square23_5x5"
                    android:text="24"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "@drawable/cube_gold_background"/>

                <com.example.oriel.a15puzzle.Cube5x5
                    android:id="@+id/square24_5x5"
                    android:text="0"
                    android:textColor="@color/number_color"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_margin="1dp"
                    android:background=
                        "#00000000"/>

            </TableRow>

        </TableLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/moves_5x5_tv"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:text="@string/moves"
                    android:textStyle="bold"
                    android:textSize="30sp"/>

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:src="@drawable/ic_autorenew_black_24dp"
                    android:background="@drawable/shuffle_cube_shape"
                    android:gravity="center"
                    android:text="@string/start_restart_game"
                    android:id="@+id/shuffle_btn_5x5"/>
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_margin="10dp"
            android:id="@+id/finish_btn_5x5"
            android:background="@drawable/finish_button_shape"
            android:text="@string/finish_game"/>

    </LinearLayout>

</LinearLayout>